# bob-code

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TESTING_ASK_TOOL.md  pyproject.toml
src/: main.py
src/agent/: __init__.py  core.py  subagent.py
src/cli/: __init__.py  interface.py
src/prompts/: __init__.py  system.py
src/providers/: __init__.py  azure.py  base.py  models.py  openai.py
src/tools/: __init__.py  base.py  executor.py  registry.py
src/tools/implementations/: __init__.py  ask.py  bash.py  edit.py  exit_plan_mode.py  plan_mode.py  read.py  slash_command.py  task.py  write.py
src/utils/: __init__.py  gitignore.py
src/workspace/: __init__.py  config.py  persistence.py
