[project]
name = "bob-code"
version = "0.1.0"
description = "My app description"
dependencies = [
  "prompt_toolkit~=3.0",
  "openai~=2.9.0",
  "anthropic~=0.75",
  "pydantic~=2.12",
  "rich~=13.0",
  "python-dotenv~=1.2"
]

[project.optional-dependencies]
dev = [
  "ruff~=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]